Win7: render progress in taskbar not synchronous across multiple windows #35128

Closed
opened 2013-04-28 14:32:41 +02:00 by Julian Herzog · 11 comments

%%%--- Operating System, Graphics card ---
Windows 6.1.7601 (Win 7 Pro) 64-bit
Quadro 1000M

- Blender version with error ---

Tested in 55078 (2.66) and 56271 (2.67 RC1), both show the error.

- Short description of error ---
  1. The green render progress in the Windows taskbar is up to date only in the currently selected window (of multiple windows belonging to the same Blender instance).
  2. If you had the second window selected during rendering and switched back, the render progress at which you switched back stays in second window. It doesn't refresh to 0 even if you switch to this window now. In other words: You can't get the green stuff to disappear from your taskbar without re-rendering from that window and not touching the other one.

(1) is not horrible but not nice, either. (2) is slightly more annoying (and probably easier to fix, not sure if (1) is fixable at all) because you constantly have some half-finished render progress display in the taskbar even if you don't render, which is most of the time.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Ctrl + Alt + W (duplicate Window)
F12 (Render)

(1)

Change to second window and back while rendering, then wait for it to finish

(2)

- Attachements ---

Screenshot to demonstrate what progress I'm talking about attached, both windows belong to the same Blender session.%%%

%%%--- Operating System, Graphics card --- Windows 6.1.7601 (Win 7 Pro) 64-bit Quadro 1000M - Blender version with error --- Tested in 55078 (2.66) and 56271 (2.67 RC1), both show the error. - Short description of error --- 1) The green render progress in the Windows taskbar is up to date only in the currently selected window (of multiple windows belonging to the same Blender instance). 2) If you had the second window selected during rendering and switched back, the render progress at which you switched back stays in second window. It doesn't refresh to 0 even if you switch to this window now. In other words: You can't get the green stuff to disappear from your taskbar without re-rendering from that window and not touching the other one. (1) is not horrible but not nice, either. (2) is slightly more annoying (and probably easier to fix, not sure if (1) is fixable at all) because you constantly have some half-finished render progress display in the taskbar even if you don't render, which is most of the time. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Ctrl + Alt + W (duplicate Window) F12 (Render) > (1) Change to second window and back while rendering, then wait for it to finish > (2) - Attachements --- Screenshot to demonstrate what progress I'm talking about attached, both windows belong to the same Blender session.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%I didn't know the feature existed even! Now need to figure out who added it...%%%

%%%I didn't know the feature existed even! Now need to figure out who added it...%%%
Member
%%%Applied by me in r34501, patch from AlexK http://projects.blender.org/scm/viewvc.php?view=rev&root=bf-blender&revision=34501%%%

%%%This is a logic error in the jobs system. wm_jobs_timer sets/clears the progress on the active window but that can change of course.%%%

%%%This is a logic error in the jobs system. wm_jobs_timer sets/clears the progress on the active window but that can change of course.%%%

%%%Alex, could you please check on this? %%%

%%%Alex, could you please check on this? %%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

Added subscriber: @Sergey

Added subscriber: @Sergey

We currently don't have WIndows Ghost maintainer, so moving to TODO now http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Install-OS#Windows

We'll solve it as soon we'll find one :)

We currently don't have WIndows Ghost maintainer, so moving to TODO now http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Install-OS#Windows We'll solve it as soon we'll find one :)

This issue was referenced by 29c2b70a2c

This issue was referenced by 29c2b70a2c30a0f06d2eb78a742cb9cf18f481df

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

Closed by commit 29c2b70a2c.

Closed by commit 29c2b70a2c.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35128
No description provided.