Fixed T35128. Progress bar sync on Windows.

Apply for all windows instead of active, otherwise progress doesn't update.